--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@
 PORT=3001
 NODE_ENV=development
 
-# MongoDB Configuration
-MONGODB_URI=mongodb://collabboard_user:collabboard_password@localhost:27017/collabboard?authSource=collabboard
+# MongoDB Configuration - MongoDB Atlas Cloud
+MONGODB_URI=mongodb+srv://azadkaji63:nRXmtQ0Qk8Y3AJIt@cluster0.yk6ah33.mongodb.net/collabboard?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_URI_DOCKER=mongodb://collabboard_user:collabboard_password@mongodb:27017/collabboard?authSource=collabboard
 
 # JWT Configuration
